<resources>
    <string name="app_name">Relative Layout</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="singapore_pic">Singapore</string>
    <string name="star">Star</string>
    <string name="singapore_text">Singapore</string>
    <string name="camera_desc">Leica M Typ 240</string>
    <string name="settings_desc">f/4 16s ISO 200</string>
    <string name="singapore_desc">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="discard">DISCARD</string>
    <string name="upload">UPLOAD</string>
    <string name="placeholder">Star</string>
</resources>
