<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout -->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/singapore_pic"
            android:scaleType="centerCrop"
            android:src="@drawable/singapore" />
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_editor_absoluteX="359dp"
            app:layout_editor_absoluteY="104dp"
            android:id="@+id/favorite"
            android:background="@drawable/info_background"
            android:padding="5dp"
            android:contentDescription="@string/placeholder"
            android:src="@mipmap/ic_star"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/Singapore"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Singapore"
            android:text="@string/singapore_text"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ImageView"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Camera_Desc"
        android:layout_alignParentStart="true"
        android:layout_below="@id/Singapore"
        android:paddingVertical="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/camera" />

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Camera"
        android:paddingVertical="12dp"
        android:text="@string/settings"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/Camera"
            android:id="@+id/Camera_Desc"
            android:text="@string/camera_desc"
            android:layout_below="@id/Singapore"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/camera_desc"
            android:inputType="text"/>

    <EditText
        android:id="@+id/Settings_Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/Settings"
        android:layout_marginStart="16dp"
        android:hint="@string/settings_desc"
        android:inputType="text"
        android:text="@string/settings_desc"
        android:layout_toEndOf="@id/Settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/upload"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/upload"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/upload"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/discard"
        android:id="@+id/discard"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/singaporeText"
        android:text="@string/singapore_desc"
        android:layout_alignTop="@id/Settings_Desc"
        android:layout_alignBottom="@id/discard"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>


    </RelativeLayout>
<!--</android.support.constraint.ConstraintLayout>-->
